[gd_scene load_steps=13 format=2]

[ext_resource path="res://levels/test/game.gd" type="Script" id=1]
[ext_resource path="res://levels/hud/hud.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/commons/themes/labelSkillFont.tres" type="Theme" id=3]
[ext_resource path="res://levels/test/Map.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/commons/assets/logotmp.png" type="Texture" id=5]
[ext_resource path="res://levels/commons/assets/fondmain.png" type="Texture" id=6]
[ext_resource path="res://levels/commons/themes/panelThemeBlack.tres" type="StyleBox" id=7]
[ext_resource path="res://levels/loadingScreen/loadingScreen.gd" type="Script" id=8]
[ext_resource path="res://levels/loadingScreen/assets/fond2.png" type="Texture" id=9]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.94902, 0.133333, 0.0470588, 0.784314 )
distance_fade_mode = 1
distance_fade_min_distance = 0.0
distance_fade_max_distance = 10.0

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.94902, 0.133333, 0.0470588, 0.784314 )
distance_fade_mode = 1
distance_fade_min_distance = 0.0
distance_fade_max_distance = 10.0

[sub_resource type="Animation" id=3]
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 0.7, 0.9, 1.8, 2, 2.2, 3.2, 3.4, 3.6, 4.4, 4.6, 4.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.99, 0.99 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.99, 0.99 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.99, 0.99 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0.99, 0.99 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2.3, 5 ),
"transitions": PoolRealArray( 0.34151, 4.59479, 0.34151 ),
"update": 0,
"values": [ 0.0, 5.0, 0.0 ]
}

[node name="game" type="Spatial"]
script = ExtResource( 1 )

[node name="interface" parent="." instance=ExtResource( 2 )]

[node name="Map" parent="." instance=ExtResource( 4 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )

[node name="killingFallArea" type="Spatial" parent="."]

[node name="DangerZone" type="CSGBox" parent="killingFallArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.325, 2.067, -22.7435 )
width = 234.386
height = 158.28
depth = 58.5609
material = SubResource( 1 )

[node name="SafeZone" type="CSGBox" parent="killingFallArea/DangerZone"]
operation = 2
width = 129.224
height = 68.726
depth = 59.7284
material = SubResource( 2 )

[node name="itemCollection" type="Spatial" parent="."]

[node name="loadingScreen" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="loadingScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 576.0
margin_bottom = 1000.0
texture = ExtResource( 6 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="loadingScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 9 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="loadingScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 300
custom_constants/margin_left = 300
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="loadingScreen/MarginContainer"]
margin_left = 300.0
margin_right = 724.0
margin_bottom = 600.0

[node name="MarginContainer2" type="MarginContainer" parent="loadingScreen/MarginContainer/VBoxContainer"]
margin_right = 424.0
margin_bottom = 50.0
size_flags_horizontal = 3
custom_constants/margin_top = 50

[node name="MusicArena" type="TextureRect" parent="loadingScreen/MarginContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 424.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 175.725, -12.5801 )
rect_clip_content = true
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="AnimationPlayer" parent="loadingScreen/MarginContainer/VBoxContainer/MusicArena"]
autoplay = "title"
anims/title = SubResource( 3 )

[node name="MarginContainer3" type="MarginContainer" parent="loadingScreen/MarginContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 424.0
margin_bottom = 108.0
size_flags_horizontal = 3
custom_constants/margin_top = 50

[node name="Panel" type="Panel" parent="loadingScreen/MarginContainer/VBoxContainer"]
margin_left = 212.0
margin_top = 112.0
margin_right = 212.0
margin_bottom = 162.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = ExtResource( 7 )

[node name="MarginContainer" type="MarginContainer" parent="loadingScreen/MarginContainer/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="loadingScreen/MarginContainer/VBoxContainer/Panel/MarginContainer"]
margin_left = 10.0
margin_top = 16.0
margin_right = 219.0
margin_bottom = 34.0
size_flags_vertical = 6
theme = ExtResource( 3 )
custom_styles/normal = ExtResource( 7 )
text = "your game is loading..."
align = 1
valign = 1
uppercase = true

[node name="MarginContainer" type="MarginContainer" parent="loadingScreen/MarginContainer/VBoxContainer"]
margin_top = 166.0
margin_right = 424.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_top = 290
